<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>zx120_unity</name>
  <version>0.0.0</version>
  <description>The zx120_unity package</description>
  <maintainer email="ws@todo.todo">common</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!--	
  <depend>move_base</depend>
  -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
